<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bgbgbg"
    android:orientation="vertical"
    tools:context=".MyProfileApp2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tht_"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/chicken_quiche"
        android:background="@drawable/bg_texs2"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_texs2"
        android:fontFamily="@font/chicken_quiche"
        android:gravity="center_horizontal"
        android:text="@string/tft_"
        android:textSize="@dimen/_40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_lets_see_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_130dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/background_button"
        android:text="@string/tst_"
        android:textStyle="bold" />

    <Button
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginLeft="@dimen/_160dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/background_button2"
        android:text="@string/tpt_"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />


</LinearLayout>